quick contrast fix

--- a/src/client/views/nodes/FilterBox.scss
+++ b/src/client/views/nodes/FilterBox.scss
@@ -35,8 +35,8 @@
 
 
 .filterBox-saveBookmark {
-    background-color: #f5f5f5;
-    border-radius: 6px;
+    background-color: #e9e9e9;
+    border-radius: 11px;
     padding-left: 8px;
     padding-right: 8px;
     padding-top: 5px;
@@ -126,7 +126,7 @@
 .filterBox-selection {
     border-radius: 6px;
     border: none;
-    background-color: #f5f5f5;
+    background-color: #e9e9e9;
     padding: 2px;
 
     &:hover {
@@ -136,8 +136,8 @@
 
 .filterBox-addFilter {
     width: 120px;
-    background-color: #f5f5f5;
-    border-radius: 10px;
+    background-color: #e9e9e9;
+    border-radius: 12px;
     padding: 5px;
     margin: 5px;
     display: flex;
